# drone_chase_px4_ros1

./: .gitignore  README.md
outputs/: architecture_diagram_description.md  final_claims_and_limits.md  final_demo_commands.md  final_paper_style_abstract.md  final_project_report.md  final_results_summary.md  method_section_for_paper.md
outputs/final_policy_registry/: final_phase7_world0_world1_report.md  final_phase7_world0_world1_woods_easy_random_woods_report.md  final_phase7_world0_world1_woods_easy_report.md  final_results_table.csv  final_results_table.md  phase7_2c_report.md  phase7_3c_registry_update_report.md  phase7_4c_registry_update_report.md  policy_manifest.json  reproduce_commands.md
outputs/phase8/extended_observation_design/: phase8_4_report.md
src/drone_chase/: CMakeLists.txt  package.xml
src/drone_chase/config/: camera_params.yaml  observation_v2_schema.yaml  phase6_env.yaml  phase7_bc_world0.yaml  phase7_ppo_woods_easy.yaml  phase7_ppo_world0.yaml  phase7_ppo_world0_10k.yaml  phase7_ppo_world0_curriculum_v1.yaml  phase7_ppo_world0_curriculum_v2.yaml  phase7_ppo_world0_from_bc_v2.yaml  phase7_ppo_world0_stable.yaml  phase7_ppo_world1.yaml  random_woods.yaml
src/drone_chase/envs/: __init__.py  gazebo_chase_env.py  observation_builder_v2.py
src/drone_chase/launch/: phase1_offboard_test.launch  phase2_chase_world.launch  phase2_random_woods_world.launch  phase2_spawn_objects.launch  phase3_perception.launch  phase4_rule_chaser.launch  phase5_rule_chaser_safety.launch  phase6_env_runtime.launch  phase6_rl_safety.launch  phase8_perception_debug.launch
src/drone_chase/models/: bc_policy.py
src/drone_chase/models/iris_rgbd_chaser/: iris_rgbd_chaser.sdf  model.config
src/drone_chase/models/red_ball/: model.config  model.sdf
src/drone_chase/models/rgbd_chaser_camera/: model.config  model.sdf
src/drone_chase/msg/: DepthRisk.msg  TargetState.msg
src/drone_chase/scripts/: cmd_vel_forwarder.py  depth_risk_estimator.py  diagnostic_direct_velocity_takeoff.py  diagnostic_hover_1p5m.py  diagnostic_spawn_front_obstacle.py  offboard_velocity_test.py  phase6_env_smoke_test.py  phase6_episode_reset.py  phase6_random_env_test.py  phase6_random_policy_rollout.py  phase6_rule_env_test.py  phase7_action_direction_audit.py  phase7_bc_action_ablation_eval.py  phase7_bc_online_error_audit.py  phase7_best_command_trace_eval.py  phase7_build_bc_aggregated_dataset.py  phase7_build_final_results_table.py  phase7_check_training_env.py  phase7_checkpoint_sweep.py  phase7_collect_dagger_demos.py  phase7_collect_expert_demos.py  phase7_command_pipeline_offline_audit.py  phase7_eval_bc_policy.py  phase7_eval_ppo_lowdim.py  phase7_expert_env_sanity.py  phase7_failed_rollout_audit.py  phase7_forward_action_intervention.py  phase7_plot_training_csv.py  phase7_python_preflight.py  phase7_random_woods_robustness_eval.py  phase7_random_woods_zeroshot_eval.py  phase7_reset_stability_check.py  phase7_reward_audit.py  phase7_train_bc_policy.py  phase7_train_ppo_from_bc.py  phase7_train_ppo_lowdim.py  phase7_woods_easy_failure_diagnosis.py  phase7_woods_easy_reset_fix_eval.py  phase7_woods_easy_robustness_eval.py  phase7_woods_easy_zeroshot_eval.py  (+17 more)
src/drone_chase/urdf/: iris_rgbd_chaser.xacro
src/drone_chase/worlds/: world_0_empty_ball.world  world_1_sparse_obstacles.world  world_2_random_woods.world
