<?xml version="1.0"?>
<package format="2">
  <name>drone_chase</name>
  <version>0.1.0</version>
  <description>Drone red-ball chasing simulation with obstacle avoidance</description>
  <maintainer email="user@todo.todo">whk</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>mavros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosbash</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
